--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa-bodyparser": "^4.2.0",
     "koa-multer": "^1.0.2",
     "koa-router": "^7.4.0",
+    "nodemon": "^1.17.3",
     "pg": "^7.4.1",
     "routing-controllers": "^0.7.7",
     "typeorm": "^0.1.16"
