--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typequiz-backend",
   "version": "1.0.0",
   "main": "target/index.js",
-  "author": "nsch1 <nick.schooneman1@gmail.com>",
+  "author": "Atharv and Boudewijn",
   "license": "MIT",
   "dependencies": {
     "@types/koa": "^2.0.44",
